# formula-1-simulations

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  las_vegas_race_replay.html  main.cpp  main.py  package-lock.json  pyproject.toml  test.csv  visual.py
.cache/clangd/index/: main.cpp.292DB88CCFBEF20B.idx  replay_logger.cpp.C9E282EB25898A72.idx  replay_logger.hpp.CEAE4A894C355569.idx  scenario_loader.cpp.FDC1D96982B7D6FA.idx  scenario_loader.hpp.277280653A752436.idx  sim_cli.cpp.BAEA6FC94EBF21AB.idx  sim_viewer.cpp.D08417C9EEF450C1.idx  simulator.cpp.F62283D64181B6B2.idx  simulator.hpp.6A4E1574AE1EE9C7.idx  telemetry_seed.cpp.70576B613E4B5C35.idx  telemetry_seed.hpp.1D6A8FADA59A1A0F.idx
apps/: sim_cli.cpp  sim_viewer.cpp
examples/scenarios/: short_race.json
examples/sql/: leaderboard_query.sql  replay_queries.sql
f1-replay/: README.md  package-lock.json  package.json
f1-replay/src/: app.html
f1-replay/src-tauri/: Cargo.toml  tauri.conf.json
f1-replay/src-tauri/src/: commands.rs  heatmap.rs  interpolate.rs  lib.rs  main.rs  race_analysis.rs  session.rs  simulation.rs  telemetry_analysis.rs  types.rs
f1-replay/src/lib/: commands.ts  constants.ts
f1-replay/src/lib/components/: AnalysisPanel.svelte  ComparisonPanel.svelte  EventSelector.svelte  Leaderboard.svelte  PlaybackControls.svelte  SimulationPanel.svelte  TelemetryChart.svelte  TelemetryPanel.svelte
f1-replay/src/lib/scene/: Canvas2DRenderer.ts  CarRenderer.ts  SceneManager.ts  TrackRenderer.ts
f1-replay/src/routes/: +page.svelte
include/f1sim/sim/: simulator.hpp
include/f1sim/support/: replay_logger.hpp  scenario_loader.hpp  telemetry_seed.hpp
scripts/: build.sh  build_native.sh  build_wasm.sh  ingest_telemetry.sh  run_cli_sim.sh  run_data_api.sh  run_viewer.sh  setup_dev.sh  sqlite_api.py
sim/: CMakeLists.txt
sim/include/f1/: c_api.h  sim_types.hpp  wasm_api.h
sim/src/: c_api.cpp  wasm_api.cpp
src/sim/: simulator.cpp
src/support/: replay_logger.cpp  scenario_loader.cpp  telemetry_seed.cpp
ts/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ts/public/config/: sim.json  track.json
ts/public/configs/: car.json  track.json
ts/src/: main.ts  renderer.ts  sim-client.ts  styles.css  types.ts  ui.ts
wasm/include/: sim_core.hpp  track.hpp
wasm/src/: main_cli.cpp  sim_core.cpp  track.cpp
