[package]
name = "f1-replay"
version = "0.1.0"
description = "F1 Race Replay"
authors = ["you"]
edition = "2021"

[lib]
name = "f1_replay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
rayon = "1"
parking_lot = "0.12"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
